// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModelLabels /> should render properly with labels 1`] = `
.emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-5 {
  height: auto;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-5 tr {
  background-color: #252525;
}

.emotion-5 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-5 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-5 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-5 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-5 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-5 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-5 td {
  max-width: calc(100vw / 5);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-5 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-5 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-6 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-6:nth-of-type(1) {
  width: 100%;
}

.emotion-6:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-12:nth-of-type(1) {
  width: 100%;
}

.emotion-12:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-14 {
  text-align: right;
}

.emotion-17 {
  position: relative;
  height: 100%;
}

.emotion-18 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 6px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #191919;
  background-color: transparent;
  margin: -6px;
}

.emotion-18:hover,
.emotion-18.focus-visible:focus {
  color: #ffffff!important;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <h3
      className="emotion-2"
    >
      Number of 
      Labels
      : 
      2
    </h3>
  </div>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-4"
    >
      <table
        className="emotion-5"
      >
        <thead>
          <tr>
            <th
              className="emotion-6"
            >
              Label
            </th>
            <th
              className="emotion-6"
            >
              # Required
            </th>
            <th
              className="emotion-6"
            >
              # Labeled
            </th>
            <th
              className="emotion-6"
            >
              # Remaining
            </th>
            <th
              className="emotion-6"
            >
              <div
                className="emotion-11"
              >
                <svg
                  data-file-name="checkmark.svg"
                  height={20}
                />
              </div>
            </th>
            <th
              className="emotion-12"
            >
              <div
                className="emotion-11"
              >
                <svg
                  data-file-name="kebab.svg"
                  height={20}
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              cat
            </td>
            <td
              className="emotion-14"
            >
              10
            </td>
            <td
              className="emotion-14"
            >
              1
            </td>
            <td
              className="emotion-14"
            >
              9
            </td>
            <td />
            <td>
              <div
                className="emotion-17"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="actions emotion-18"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="kebab.svg"
                    height={20}
                  />
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              dog
            </td>
            <td
              className="emotion-14"
            >
              10
            </td>
            <td
              className="emotion-14"
            >
              1
            </td>
            <td
              className="emotion-14"
            >
              9
            </td>
            <td />
            <td>
              <div
                className="emotion-17"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="actions emotion-18"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="kebab.svg"
                    height={20}
                  />
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div>
     
  </div>
  <div>
     
  </div>
</div>
`;

exports[`<ModelLabels /> should render properly with no labels 1`] = `
.emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-4 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-5 {
  height: 100%;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-5 tr {
  background-color: #252525;
}

.emotion-5 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-5 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-5 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-5 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-5 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-5 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-5 td {
  max-width: calc(100vw / 5);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-5 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-5 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-6 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-6:nth-of-type(1) {
  width: 100%;
}

.emotion-6:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-12:nth-of-type(1) {
  width: 100%;
}

.emotion-12:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-14 {
  height: 100%;
  pointer-events: none;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 18px;
  line-height: 21px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <h3
      className="emotion-2"
    >
      Number of 
      Labels
      : 
      0
    </h3>
  </div>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-4"
    >
      <table
        className="emotion-5"
      >
        <thead>
          <tr>
            <th
              className="emotion-6"
            >
              Label
            </th>
            <th
              className="emotion-6"
            >
              # Required
            </th>
            <th
              className="emotion-6"
            >
              # Labeled
            </th>
            <th
              className="emotion-6"
            >
              # Remaining
            </th>
            <th
              className="emotion-6"
            >
              <div
                className="emotion-11"
              >
                <svg
                  data-file-name="checkmark.svg"
                  height={20}
                />
              </div>
            </th>
            <th
              className="emotion-12"
            >
              <div
                className="emotion-11"
              >
                <svg
                  data-file-name="kebab.svg"
                  height={20}
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="emotion-14"
          >
            <td
              colSpan={6}
            >
              <div
                className="emotion-15"
              >
                <div
                  className="emotion-16"
                >
                  <svg
                    data-file-name="noJobs.svg"
                    width={200}
                  />
                  <div>
                    There are currently no labels for this model.
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`<ModelLabels /> should render properly with required assets per labels 1`] = `
.emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-2 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-5 {
  height: auto;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-5 tr {
  background-color: #252525;
}

.emotion-5 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-5 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-5 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-5 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-5 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-5 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-5 td {
  max-width: calc(100vw / 5);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-5 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-5 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-6 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-6:nth-of-type(1) {
  width: 100%;
}

.emotion-6:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-12:nth-of-type(1) {
  width: 100%;
}

.emotion-12:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-14 {
  text-align: right;
}

.emotion-17 {
  position: relative;
  height: 100%;
}

.emotion-18 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 6px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #191919;
  background-color: transparent;
  margin: -6px;
}

.emotion-18:hover,
.emotion-18.focus-visible:focus {
  color: #ffffff!important;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <h3
      className="emotion-2"
    >
      Number of 
      Labels
      : 
      2
    </h3>
  </div>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-4"
    >
      <table
        className="emotion-5"
      >
        <thead>
          <tr>
            <th
              className="emotion-6"
            >
              Label
            </th>
            <th
              className="emotion-6"
            >
              # Required
            </th>
            <th
              className="emotion-6"
            >
              # Labeled
            </th>
            <th
              className="emotion-6"
            >
              # Remaining
            </th>
            <th
              className="emotion-6"
            >
              <div
                className="emotion-11"
              >
                <svg
                  data-file-name="checkmark.svg"
                  height={20}
                />
              </div>
            </th>
            <th
              className="emotion-12"
            >
              <div
                className="emotion-11"
              >
                <svg
                  data-file-name="kebab.svg"
                  height={20}
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              cat
            </td>
            <td
              className="emotion-14"
            >
              1
            </td>
            <td
              className="emotion-14"
            >
              1
            </td>
            <td
              className="emotion-14"
            >
              -
            </td>
            <td>
              <svg
                color="#009f22"
                data-file-name="checkmark.svg"
                height={20}
              />
            </td>
            <td>
              <div
                className="emotion-17"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="actions emotion-18"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="kebab.svg"
                    height={20}
                  />
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              dog
            </td>
            <td
              className="emotion-14"
            >
              1
            </td>
            <td
              className="emotion-14"
            >
              1
            </td>
            <td
              className="emotion-14"
            >
              -
            </td>
            <td>
              <svg
                color="#009f22"
                data-file-name="checkmark.svg"
                height={20}
              />
            </td>
            <td>
              <div
                className="emotion-17"
              >
                <button
                  aria-label="Toggle Actions Menu"
                  className="actions emotion-18"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  <svg
                    data-file-name="kebab.svg"
                    height={20}
                  />
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div>
     
  </div>
  <div>
     
  </div>
</div>
`;
